--- a/DemoProject1/test-output/old/Default suite/methods-alphabetical.html
+++ b/DemoProject1/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ca61a2">  <td>22/07/22 11:32:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SumValidation.sumOfCourses()[pri:0, instance:SumValidation@6e4784bc]">sumOfCourses</td> 
-  <td>main@1793799654</td>   <td></td> </tr>
+<tr bgcolor="a5fe93">  <td>22/08/03 09:52:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicJson.addBook()[pri:0, instance:files.DynamicJson@30ee2816]">addBook</td> 
+  <td>main@883151184</td>   <td></td> </tr>
 </table>
